# rag_bot_assignment

./: .dockerignore  .gitignore  .~lock.DataScience_Assignment.docx#  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt
bot/: config.py  main.py  model_setup.py  populate_embeddings.py  rag.sqlite3  states.py  test.py  utils.py
bot/handlers/: help.py  image.py  rag.py  start.py  summary.py
